--- a/templates/details.html
+++ b/templates/details.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title><%= context.title %></title>
+    <link href="/details.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <img src="<%= context.image %>">
     <h1><%= context.city %></h1>
+    <img src="<%= context.image %>">
     <h1><%= context.name %></h1>
   </body>
 </html>
