--- a/public/gallery.css
+++ b/public/gallery.css
@@ -14,8 +14,8 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid red;
+  border: 2px solid blue;
   border-radius: 5px;
-  background-color: pink;
+  background-color: skyblue;
   padding: 10px;
 }
